:pencil: update badges

--- a/.github/workflows/docker-cd-release.yml
+++ b/.github/workflows/docker-cd-release.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: client - build and publish image
+    - name: docker build, push
       run: |
         echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
 
