--- a/.github/workflows/docker-cd-release.yml
+++ b/.github/workflows/docker-cd-release.yml
@@ -7,20 +7,31 @@ on:
     types: [published]
 
 jobs:
-
   publish-app-images:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: docker build, push
+    - name: Set vars
+      shell: bash
       run: |
+        echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})
+        echo ::set-output name=rev::$(git rev-parse --short=8 ${{ github.sha }})
+        echo ::set-output name=tag::$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
+    - name: docker build, push
+      shell: bash
+      run: |
+        echo branch: ${{ steps.extract_branch.outputs.branch }}
+        echo rev: ${{ steps.extract_branch.outputs.rev }}
+        echo tag: ${{ steps.extract_branch.outputs.tag }}
+
         echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
 
         projects=( api banner banner-data client )
         for project in "${projects[@]}"
         do
-          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/client:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') .
-          docker tag docker.pkg.github.com/${{ github.repository }}/client:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') docker.pkg.github.com/${{ github.repository }}/client:latest
-          docker push docker.pkg.github.com/${{ github.repository }}/client:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
-          docker push docker.pkg.github.com/${{ github.repository }}/client:latest
+          echo Working on $project ...
+          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.tag }} .
+          docker tag docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.tag }} docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.branch }}
+          docker push docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.tag }}
+          docker push docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.branch }}
         done
