--- a/banner-data/package.json
+++ b/banner-data/package.json
@@ -44,7 +44,7 @@
         "eslint-plugin-prettier": "^3.1.2",
         "mocha": "^7.1.1",
         "nodemon": "^2.0.3",
-        "nyc": "^15.0.1",
+        "nyc": "~14.1.1",
         "prettier": "^2.0.4",
         "ts-node": "^8.8.2",
         "tslib": "^1.11.1",
