--- a/banner/package.json
+++ b/banner/package.json
@@ -56,7 +56,7 @@
         "is-redirect": "^1.0.0",
         "mocha": "^7.1.1",
         "nodemon": "^2.0.3",
-        "nyc": "^15.0.1",
+        "nyc": "~14.1.1",
         "pify": "^5.0.0",
         "prettier": "^2.0.4",
         "ts-node": "^8.8.2",
