--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -11,16 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set vars
-      shell: bash
-      run: |
-        echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})
-        echo ::set-output name=sha_short::$(git rev-parse --short=8 ${{ github.sha }})
     - name: docker build, push
-      shell: bash
       run: |
-        echo branch: ${{ steps.extract_branch.outputs.branch }}
-        echo rev: ${{ steps.extract_branch.outputs.sha_short }}
+        branch=$(echo ${GITHUB_REF#refs/heads/})
+        rev=$(echo ${GITHUB_SHA} | cut -c1-8)
+        echo branch: $branch
+        echo rev: $rev
 
         echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
 
@@ -28,8 +24,8 @@ jobs:
         for project in "${projects[@]}"
         do
           echo Working on $project ...
-          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.sha_short }} .
-          docker tag docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.sha_short }} docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.branch }}
-          docker push docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.sha_short }}
-          docker push docker.pkg.github.com/${{ github.repository }}/$project:${{ steps.extract_branch.outputs.branch }}
+          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$project:$rev .
+          docker tag docker.pkg.github.com/${{ github.repository }}/$project:$rev docker.pkg.github.com/${{ github.repository }}/$project:$branch
+          docker push docker.pkg.github.com/${{ github.repository }}/$project:$rev
+          docker push docker.pkg.github.com/${{ github.repository }}/$project:$branch
         done
