--- a/k8s/BannerRedis.yaml
+++ b/k8s/BannerRedis.yaml
@@ -1,37 +1,37 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-redis
+  name: banner-redis
 spec:
   selector:
-    app: registrum-api-redis
+    app: registrum-banner-redis
   ports:
-    - port: 6379
+    - port: 6380
       targetPort: 6379
   type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: registrum-api-redis-deployment
+  name: registrum-banner-redis-deployment
 spec:
   selector:
     matchLabels:
-      app: registrum-api-redis
+      app: registrum-banner-redis
   replicas: 1
   template:
     metadata:
       labels:
-        app: registrum-api-redis
+        app: registrum-banner-redis
     spec:
       containers:
-        - name: registrum-api-redis
+        - name: registrum-banner-redis
           image: redis
           ports:
             - containerPort: 6379
           volumeMounts:
-            - name: redis-storage
+            - name: redis-banner-storage
               mountPath: /data/redis
       volumes:
-        - name: redis-storage
+        - name: redis-banner-storage
           emptyDir: {}
