--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -3,6 +3,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./RegistrumApi.yaml
+  - ./Secrets.yaml
   - ./ApiRedis.yaml
+  - ./BannerRedis.yaml
+  - ./RegistrumApi.yaml
   - ./RegistrumClient.yaml
+  - ./RegistrumBanner.yaml
+  - ./RegistrumBannerData.yaml
