--- a/k8s/Secrets.Example.yaml
+++ b/k8s/Secrets.Example.yaml
@@ -10,7 +10,7 @@ data:
   API_REDIS_URI: cmVkaXM6Ly9hcGktcmVkaXM6NjM3OQo= # redis://api-redis:6379
   API_PORT: NDAwMAo= # 4000
   MONGODB_URI: <mongo_uri_here_base64>
-  BANNER_URL: aHR0cDovL2Jhbm5lcjo0MDAxL2Jhbm5lcgo= # http://banner:4001/banner
+  BANNER_URL: aHR0cDovL2Jhbm5lcjo0MDAxL2Jhbm5lcg== # http://banner:4001/banner
 ---
 apiVersion: v1
 kind: Secret
@@ -23,7 +23,7 @@ data:
   MONGODB_URI: <mongo_uri_here_base64>
   BANNER_REDIS_URI: cmVkaXM6Ly9iYW5uZXItcmVkaXM6NjM4MAo= # redis://banner-redis:6380
   API_PROXY_URL: aHR0cDovL2FwaTo0MDAwCg== # http://api:4000
-  BANNER_BASE_PATH: L2Jhbm5lcgo= # /banner
+  BANNER_BASE_PATH: L2Jhbm5lcg== # /banner
 
 ---
 apiVersion: v1
