--- a/banner-data/package.json
+++ b/banner-data/package.json
@@ -7,15 +7,25 @@
         "lint": "eslint \"**/*.{js,ts}\"",
         "lint:fix": "npm run lint -- --fix",
         "start": "node dist/index.js",
-        "test": "nyc --reporter=lcov --reporter=text mocha -r ts-node/register src/tests/**/*.spec.ts",
+        "test": "jest -i --silent --runInBand",
         "watch": "concurrently -n ts,node \"npm run watch:ts\" \"npm run watch:node\"",
         "watch:node": "nodemon --watch dist dist/index.js",
         "watch:test": "npm run test -- --watch-files src --watch",
         "watch:ts": "tsc -w --preserveWatchOutput"
     },
-    "nyc": {
-        "exclude": "**/*.spec.ts",
-        "include": "src"
+    "jest": {
+        "collectCoverage": true,
+        "coverageDirectory": "./coverage/",
+        "globals": {
+            "ts-jest": {
+                "packageJson": "package.json"
+            }
+        },
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "testPathIgnorePatterns": [
+            "<rootDir>/dist/"
+        ]
     },
     "dependencies": {
         "argparse": "^1.0.10",
@@ -30,7 +40,6 @@
     "devDependencies": {
         "@types/argparse": "^1.0.38",
         "@types/chai": "^4.2.11",
-        "@types/mocha": "^7.0.2",
         "@types/mongoose": "^5.7.10",
         "@types/node": "^13.11.1",
         "@types/node-cron": "^2.0.3",
@@ -42,12 +51,13 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-prettier": "^3.1.2",
-        "mocha": "^7.1.1",
         "nodemon": "^2.0.3",
-        "nyc": "~14.1.1",
         "prettier": "^2.0.4",
         "ts-node": "^8.8.2",
         "tslib": "^1.11.1",
-        "typescript": "^3.8.3"
+        "typescript": "^3.8.3",
+        "jest": "^25.5.3",
+        "ts-jest": "^25.4.0",
+        "@types/jest": "^25.2.1"
     }
 }
