--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
+        "react-select": "~3.1.0",
         "react-toastify": "^5.5.0",
         "react-transition-group": "^4.3.0",
         "redux": "^4.0.5",
@@ -70,9 +71,7 @@
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "regenerator-runtime": "^0.13.5",
-        "tiny-warning": "^1.0.3",
-        "react-select": "~3.1.0",
-        "@types/react-select": "~3.0.11"
+        "tiny-warning": "^1.0.3"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
@@ -99,6 +98,7 @@
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "babel-loader": "^8.1.0",
+        "concurrently": "^5.1.0",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.5.2",
         "enzyme": "^3.11.0",
@@ -115,7 +115,7 @@
         "image-webpack-loader": "^6.0.0",
         "jest": "^25.3.0",
         "node-sass": "^4.13.1",
-        "prettier": "^2.0.4",
+        "nodemon": "^2.0.3",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "ts-jest": "^25.3.1",
@@ -124,7 +124,6 @@
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3",
-        "nodemon": "^2.0.3",
-        "concurrently": "^5.1.0"
+        "@types/react-select": "~3.0.12"
     }
 }
