--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,16 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen          80;
+    server_name     localhost;
+    include         /etc/nginx/mime.types;
+
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html;
-        try_files $uri /index.html;
+        root        /usr/share/nginx/html;
+        index       index.html;
+        try_files   $uri /index.html;
     }
+
     location /api {
-        proxy_pass         http://api:4000;
+        proxy_pass  http://api:4000;
     }
+
 }
