--- a/client/.babelrc
+++ b/client/.babelrc
@@ -5,11 +5,22 @@
             {
                 "useBuiltIns": "usage",
                 "shippedProposals": true,
-                "corejs": { "version": 3, "proposals": true }
+                "corejs": {
+                    "version": 3,
+                    "proposals": true
+                }
             }
         ],
-        ["@babel/preset-react"],
-        ["@babel/preset-typescript"]
+        [
+            "@babel/preset-react"
+        ],
+        [
+            "@babel/preset-typescript"
+        ]
     ],
-    "plugins": ["@babel/plugin-proposal-class-properties"]
+    "plugins": [
+        "@babel/plugin-syntax-dynamic-import",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
+    ]
 }
