--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,3 +1,23 @@
-// * Automatically Generated tsconfig file
-// * Change settings in settings/tsconfig.js
- {"compilerOptions":{"paths":{"@utils/*":["utils/*"],"@actions/*":["models/redux/actions/*"],"@reducers/*":["models/redux/reducers/*"],"@redux/*":["models/redux/*"],"@components/*":["components/*"],"@styles/*":["styles/*"],"@assets/*":["assets/*"],"@interfaces/*":["models/interfaces/*"],"@pages/*":["pages/*"]},"target":"es6","outDir":"./public/","strictNullChecks":true,"moduleResolution":"node","allowJs":true,"noEmit":true,"strict":true,"esModuleInterop":true,"jsx":"react","baseUrl":"src","lib":["es2015","dom.iterable","es2016.array.include","es2017.object","dom","es2020","es2019"],"module":"es6","removeComments":true,"alwaysStrict":true,"allowUnreachableCode":false,"noImplicitAny":true,"noImplicitThis":true,"noUnusedLocals":true,"noUnusedParameters":true,"noImplicitReturns":true,"noFallthroughCasesInSwitch":true,"forceConsistentCasingInFileNames":true,"importHelpers":true}}
+{
+    "compilerOptions": {
+        "target": "esnext",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "jsx": "preserve",
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
+        "strict": true,
+        "noEmit": true,
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "isolatedModules": true,
+        "resolveJsonModule": true
+    },
+    "exclude": [
+        "node_modules"
+    ]
+}
