--- a/banner-data/package.json
+++ b/banner-data/package.json
@@ -13,26 +13,12 @@
         "watch:test": "npm run test -- --watch-files src --watch",
         "watch:ts": "tsc -w --preserveWatchOutput"
     },
-    "jest": {
-        "collectCoverage": true,
-        "coverageDirectory": "./coverage/",
-        "globals": {
-            "ts-jest": {
-                "packageJson": "package.json"
-            }
-        },
-        "preset": "ts-jest",
-        "testEnvironment": "node",
-        "testPathIgnorePatterns": [
-            "<rootDir>/dist/"
-        ]
-    },
     "dependencies": {
         "argparse": "^1.0.10",
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
         "dotenv": "^8.2.0",
-        "mongoose": "^5.9.7",
+        "mongoose": "^5.9.11",
         "node-cron": "^2.0.3",
         "registrum-banner": "^0.1.0",
         "tough-cookie": "^4.0.0"
@@ -40,24 +26,24 @@
     "devDependencies": {
         "@types/argparse": "^1.0.38",
         "@types/chai": "^4.2.11",
-        "@types/mongoose": "^5.7.10",
-        "@types/node": "^13.11.1",
+        "@types/jest": "^25.2.1",
+        "@types/mongoose": "^5.7.14",
+        "@types/node": "^13.13.4",
         "@types/node-cron": "^2.0.3",
         "@types/tough-cookie": "^4.0.0",
-        "@typescript-eslint/eslint-plugin": "^2.27.0",
-        "@typescript-eslint/parser": "^2.27.0",
+        "@typescript-eslint/eslint-plugin": "^2.30.0",
+        "@typescript-eslint/parser": "^2.30.0",
         "chai": "^4.2.0",
-        "concurrently": "^5.1.0",
+        "concurrently": "^5.2.0",
         "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.10.1",
-        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "jest": "^25.5.4",
         "nodemon": "^2.0.3",
-        "prettier": "^2.0.4",
-        "ts-node": "^8.8.2",
-        "tslib": "^1.11.1",
-        "typescript": "^3.8.3",
-        "jest": "^25.5.3",
+        "prettier": "^2.0.5",
         "ts-jest": "^25.4.0",
-        "@types/jest": "^25.2.1"
+        "ts-node": "^8.9.1",
+        "tslib": "^1.11.1",
+        "typescript": "^3.8.3"
     }
 }
