--- a/banner/package.json
+++ b/banner/package.json
@@ -13,64 +13,41 @@
         "watch:test": "npm run test -- --watch-files src --watch",
         "watch:ts": "tsc -w --preserveWatchOutput"
     },
-    "jest": {
-        "collectCoverage": true,
-        "coverageDirectory": "./coverage/",
-        "globals": {
-            "ts-jest": {
-                "packageJson": "package.json"
-            }
-        },
-        "preset": "ts-jest",
-        "testEnvironment": "node",
-        "testPathIgnorePatterns": [
-            "<rootDir>/dist/"
-        ]
-    },
     "dependencies": {
-        "apicache": "^1.5.3",
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "ioredis": "^4.16.2",
-        "mongoose": "^5.9.7",
+        "ioredis": "^4.16.3",
+        "mongoose": "^5.9.11",
         "morgan": "^1.10.0",
-        "request": "^2.88.2",
-        "request-promise-native": "^1.0.8",
         "tough-cookie": "^4.0.0"
     },
     "devDependencies": {
-        "@types/apicache": "^1.2.2",
         "@types/chai": "^4.2.11",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
-        "@types/ioredis": "^4.14.9",
-        "@types/mongoose": "^5.7.10",
+        "@types/ioredis": "^4.16.0",
+        "@types/jest": "^25.2.1",
+        "@types/mongoose": "^5.7.14",
         "@types/morgan": "^1.9.0",
-        "@types/node": "^13.11.1",
-        "@types/request": "^2.48.4",
-        "@types/request-promise-native": "^1.0.17",
+        "@types/node": "^13.13.4",
         "@types/tough-cookie": "^4.0.0",
-        "@typescript-eslint/eslint-plugin": "^2.27.0",
-        "@typescript-eslint/parser": "^2.27.0",
+        "@typescript-eslint/eslint-plugin": "^2.30.0",
+        "@typescript-eslint/parser": "^2.30.0",
         "chai": "^4.2.0",
-        "concurrently": "^5.1.0",
+        "concurrently": "^5.2.0",
         "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.10.1",
-        "eslint-plugin-prettier": "^3.1.2",
-        "is-redirect": "^1.0.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "jest": "^25.5.4",
         "nodemon": "^2.0.3",
-        "pify": "^5.0.0",
-        "prettier": "^2.0.4",
-        "ts-node": "^8.8.2",
-        "tslib": "^1.11.1",
-        "typescript": "^3.8.3",
-        "jest": "^25.5.3",
+        "prettier": "^2.0.5",
         "ts-jest": "^25.4.0",
-        "@types/jest": "^25.2.1"
+        "ts-node": "^8.9.1",
+        "typescript": "^3.8.3"
     }
 }
