--- a/client/package.json
+++ b/client/package.json
@@ -7,55 +7,16 @@
         "lint": "eslint \"src/**/*.{js,ts,tsx}\"",
         "lint:fix": "npm run lint -- --fix",
         "refresh": "node ./scripts/refresh.js",
-        "watch": "webpack-dev-server --mode=development",
         "start": "http-server dist",
-        "test": "jest --silent"
-    },
-    "jest": {
-        "collectCoverage": true,
-        "coverageDirectory": "./coverage/",
-        "globals": {
-            "ts-jest": {
-                "packageJson": "package.json"
-            }
-        },
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js"
-        ],
-        "moduleNameMapper": {
-            "\\.(css|less)$": "identity-obj-proxy"
-        },
-        "modulePaths": [
-            "<rootDir>"
-        ],
-        "setupFiles": [
-            "<rootDir>/src/test/test-setup.js"
-        ],
-        "testMatch": [
-            "<rootDir>/src/test/*.test.(ts|tsx|js)"
-        ],
-        "transform": {
-            "^.+\\.(ts|tsx)$": "ts-jest",
-            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/fileTransformer.js"
-        }
+        "test": "jest --silent",
+        "watch": "webpack-dev-server --mode=development"
     },
     "dependencies": {
-        "@date-io/date-fns": "^2.6.1",
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
-        "@fortawesome/free-brands-svg-icons": "^5.13.0",
-        "@fortawesome/free-regular-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "@testing-library/jest-dom": "^5.5.0",
-        "@testing-library/user-event": "^10.1.0",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
-        "core-js": "^3.6.5",
-        "date-fns": "^2.12.0",
-        "gud": "^1.0.0",
-        "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
         "react-bootstrap": "^1.0.1",
@@ -64,25 +25,22 @@
         "react-router-dom": "^5.1.2",
         "react-select": "~3.1.0",
         "react-toastify": "^5.5.0",
-        "react-transition-group": "^4.3.0",
         "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.8",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.3.0",
         "regenerator-runtime": "^0.13.5",
-        "tiny-warning": "^1.0.3"
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
-        "@testing-library/dom": "^7.2.2",
         "@testing-library/react": "^10.0.4",
-        "@types/enzyme": "^3.10.5",
-        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/copy-webpack-plugin": "^5.0.0",
+        "@types/html-webpack-plugin": "^3.2.2",
         "@types/jest": "^25.2.1",
         "@types/node": "^13.13.4",
         "@types/react": "^16.9.34",
@@ -90,41 +48,33 @@
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.5",
         "@types/react-select": "~3.0.12",
-        "@types/react-transition-group": "^4.2.4",
         "@types/testing-library__react": "^10.0.1",
+        "@types/webpack": "^4.41.12",
+        "@types/webpack-dev-server": "^3.10.1",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
         "@typescript-eslint/parser": "^2.30.0",
         "babel-loader": "^8.1.0",
-        "cross-env": "^7.0.2",
+        "copy-webpack-plugin": "^5.1.1",
+        "core-js": "^3.6.5",
         "css-loader": "^3.5.3",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-config-react": "^1.1.7",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "^4.0.0",
         "html-webpack-plugin": "^4.3.0",
         "jest": "^25.5.4",
-        "rimraf": "^3.0.2",
+        "node-sass": "^4.14.0",
+        "prop-types": "^15.7.2",
+        "redux-devtools-extension": "^2.13.8",
         "sass-loader": "^8.0.2",
-        "serve": "^11.3.0",
         "style-loader": "^1.2.1",
         "ts-jest": "^25.4.0",
         "typescript": "^3.8.3",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "workbox-webpack-plugin": "^5.1.3",
-        "@types/workbox-webpack-plugin": "^5.1.0",
-        "@types/html-webpack-plugin": "^3.2.2",
-        "@types/webpack": "^4.41.12",
-        "@types/webpack-dev-server": "^3.10.1",
-        "copy-webpack-plugin": "^5.1.1",
-        "@types/copy-webpack-plugin": "^5.0.0",
         "http-server": "^0.12.3"
     }
 }
