--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,7 +15,19 @@
         "skipLibCheck": true,
         "esModuleInterop": true,
         "isolatedModules": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "baseUrl": "src",
+        "paths": {
+            "@utils": ["utils"],
+            "@actions": ["models/redux/actions"],
+            "@reducers": ["models/redux/reducers"],
+            "@redux": ["models/redux"],
+            "@components": ["components"],
+            "@styles": ["styles"],
+            "@assets": ["assets"],
+            "@interfaces": ["models/interfaces"],
+            "@pages": ["pages"]
+        }
     },
     "exclude": [
         "node_modules"
