--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,8 @@
         "react-toastify": "^5.5.0",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
-        "regenerator-runtime": "^0.13.5",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "regenerator-runtime": "^0.13.5"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -38,7 +38,9 @@
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
+        "@testing-library/jest-dom": "^5.5.0",
         "@testing-library/react": "^10.0.4",
+        "@testing-library/user-event": "^10.1.0",
         "@types/copy-webpack-plugin": "^5.0.0",
         "@types/html-webpack-plugin": "^3.2.2",
         "@types/jest": "^25.2.1",
@@ -48,7 +50,9 @@
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.5",
         "@types/react-select": "~3.0.12",
+        "@types/testing-library__jest-dom": "^5.0.3",
         "@types/testing-library__react": "^10.0.1",
+        "@types/testing-library__user-event": "^4.1.1",
         "@types/webpack": "^4.41.12",
         "@types/webpack-dev-server": "^3.10.1",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
@@ -64,9 +68,11 @@
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.19.0",
         "html-webpack-plugin": "^4.3.0",
+        "http-server": "^0.12.3",
         "jest": "^25.5.4",
         "node-sass": "^4.14.0",
         "prop-types": "^15.7.2",
+        "react-test-renderer": "^16.13.1",
         "redux-devtools-extension": "^2.13.8",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.1",
@@ -75,6 +81,9 @@
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3",
-        "http-server": "^0.12.3"
+        "enzyme-adapter-react-16": "^1.15.2",
+        "enzyme": "^3.11.0",
+        "@types/enzyme": "^3.10.5",
+        "@types/enzyme-adapter-react-16": "^1.0.6"
     }
 }
