--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -12,29 +12,34 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: docker build, push
+      shell: pwsh
       run: |
-        branch=$(echo ${GITHUB_REF#refs/heads/})
-        rev=$(echo ${GITHUB_SHA} | cut -c1-8)
-        echo branch: $branch
-        echo rev: $rev
+        $branch="${GITHUB_REF#refs/heads/}"
+        $rev="${GITHUB_SHA}".Substring(0,8)
 
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+        Write-Host branch: $branch
+        Write-Host rev: $rev
 
+        Write-Host ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+
+        docker build -t registrum_base -f Base.Dockerfile .
+
+        $projects=@("api", "banner", "banner-data", "client")
         projects=( api banner banner-data client )
-        for project in "${projects[@]}"
-        do
-          echo Working on $project ...
+        foreach($project in $projects) {
+          Write-Host Working on $project ...
           docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$project:$rev .
           docker tag docker.pkg.github.com/${{ github.repository }}/$project:$rev docker.pkg.github.com/${{ github.repository }}/$project:$branch
           docker push docker.pkg.github.com/${{ github.repository }}/$project:$rev
           docker push docker.pkg.github.com/${{ github.repository }}/$project:$branch
-        done
+        }
     - name: Trigger Hooks - master
+      shell: pwsh
       if: github.ref == 'refs/heads/master'
       run: |
-        curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.MASTER_HOOK }}'
+        Invoke-WebRequest -Method POST -Body @{} -Uri '${{ secrets.MASTER_HOOK }}'
     - name: Trigger Hooks - staging
+      shell: pwsh
       if: github.ref == 'refs/heads/staging'
       run: |
-        curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.STAGING_HOOK }}'
-
+        Invoke-WebRequest -Method POST -Body @{} -Uri '${{ secrets.STAGING_HOOK }}'
