--- a/.github/workflows/docker-cd-release.yml
+++ b/.github/workflows/docker-cd-release.yml
@@ -12,21 +12,24 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: docker build, push
+      shell: pwsh
       run: |
-        tag=$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
-        echo tag: $tag
+        $tag="${GITHUB_REF#refs/tags/}"
 
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+        Write-Host tag: $tag
 
-        projects=( api banner banner-data client )
-        for project in "${projects[@]}"
-        do
-          echo Working on $project ...
+        Write-Host ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+
+        docker build -t registrum_base -f Base.Dockerfile .
+
+        $projects=@("api", "banner", "banner-data", "client")
+        foreach($project in $projects) {
+          Write-Host Working on $project ...
           docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$project:$tag .
           docker tag docker.pkg.github.com/${{ github.repository }}/$project:$tag docker.pkg.github.com/${{ github.repository }}/$project:latest
           docker push docker.pkg.github.com/${{ github.repository }}/$project:$tag
           docker push docker.pkg.github.com/${{ github.repository }}/$project:latest
-        done
+        }
 
     - name: Trigger Hooks
       run: |
