--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,9 +8,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: docker build
+      shell: pwsh
       run: |
-        projects=( api banner banner-data client )
-        for project in "${projects[@]}"
-        do
+        docker build -t registrum_base -f Base.Dockerfile .
+        $projects=@("api", "banner", "banner-data", "client")
+        foreach($project in $projects) {
           docker build --target $project .
-        done
+        }
