--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,9 @@
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
-        "regenerator-runtime": "^0.13.5"
+        "regenerator-runtime": "^0.13.5",
+        "morgan": "~1.10.0",
+        "@types/morgan": "~1.9.0"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
