--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "esnext",
         "module": "commonjs",
         "moduleResolution": "node",
-        "jsx": "preserve",
+        "jsx": "react",
         "lib": [
             "dom",
             "dom.iterable",
