--- a/codecov.yml
+++ b/codecov.yml
@@ -3,16 +3,20 @@ coverage:
     project:
       default: off
       client:
-        flags: 
+        threshold: 0%
+        flags:
           - client
       api:
-        flags: 
+        threshold: 0%
+        flags:
           - api
       banner:
-        flags: 
+        threshold: 0%
+        flags:
           - banner
       banner-data:
-        flags: 
+        threshold: 0%
+        flags:
           - banner-data
 
 flags:
