--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -36,9 +36,9 @@ jobs:
       shell: pwsh
       if: github.ref == 'refs/heads/master'
       run: |
-        Invoke-WebRequest -Method POST -Body @{} -Uri '${{secrets.MASTER_HOOK}}'
+        curl --request POST --data '{}' --header 'Content-Type: application/json' '${{ secrets.MASTER_HOOK }}'
     - name: Trigger Hooks - staging
       shell: pwsh
       if: github.ref == 'refs/heads/staging'
       run: |
-        Invoke-WebRequest -Method POST -Body @{} -Uri '${{secrets.STAGING_HOOK}}'
+        curl --request POST --data '{}' --header 'Content-Type: application/json' '${{ secrets.STAGING_HOOK }}'
