--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,11 @@
         "redux-thunk": "^2.3.0",
         "regenerator-runtime": "^0.13.5",
         "morgan": "~1.10.0",
-        "@types/morgan": "~1.9.0"
+        "@types/morgan": "~1.9.0",
+        "@chakra-ui/core": "^0.7.0",
+        "@emotion/core": "^10.0.28",
+        "@emotion/styled": "^10.0.27",
+        "emotion-theming": "^10.0.27"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
