--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -12,29 +12,32 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: docker build, push
+      shell: pwsh
       run: |
-        branch=$(echo ${GITHUB_REF#refs/heads/})
-        rev=$(echo ${GITHUB_SHA} | cut -c1-8)
-        echo branch: $branch
-        echo rev: $rev
+        $branch="${{ github.ref }}".Split("refs/heads/")[1]
+        Write-Host branch: $branch
 
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+        $rev="${{ github.sha }}".Substring(0,8)
+        Write-Host rev: $rev
 
-        projects=( api banner banner-data client )
-        for project in "${projects[@]}"
-        do
-          echo Working on $project ...
-          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$project:$rev .
-          docker tag docker.pkg.github.com/${{ github.repository }}/$project:$rev docker.pkg.github.com/${{ github.repository }}/$project:$branch
-          docker push docker.pkg.github.com/${{ github.repository }}/$project:$rev
-          docker push docker.pkg.github.com/${{ github.repository }}/$project:$branch
-        done
+        docker login ${{ secrets.REGISTRY_HOST }} --username ${{ secrets.REGISTRY_USER }} --password ${{ secrets.REGISTRY_PASSWORD }}
+
+        docker build -t registrum_base -f Base.Dockerfile .
+
+        $projects=@("api", "banner", "banner-data", "client")
+        foreach($project in $projects) {
+          Write-Host Working on $project ...
+          docker build --target $project -t acmuic.azurecr.io/${{ github.repository }}/$($project):$branch .
+          docker push acmuic.azurecr.io/${{ github.repository }}/$($project):$branch
+        }
+
     - name: Trigger Hooks - master
+      shell: pwsh
       if: github.ref == 'refs/heads/master'
       run: |
         curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.MASTER_HOOK }}'
     - name: Trigger Hooks - staging
+      shell: pwsh
       if: github.ref == 'refs/heads/staging'
       run: |
         curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.STAGING_HOOK }}'
-
