implemented smarter banner sync

--- a/banner-data/.env.example
+++ b/banner-data/.env.example
@@ -1,2 +1,2 @@
 REFRESH_INTERVAL=0 0 * * *
-MONGODB_URI=mongodb://localhost:27017/registrum/?replicaSet=rsName
+MONGODB_URI=mongodb://localhost:27017/registrum
