--- a/banner/.env.example
+++ b/banner/.env.example
@@ -1,5 +1,5 @@
 BANNER_PORT=4001
 BANNER_BASE_PATH=/banner
 CACHE_TIME=10 minutes
-MONGODB_URI=mongodb://localhost:27017/registrum/?replicaSet=rsName
+MONGODB_URI=mongodb://localhost:27017/registrum
 API_PROXY_URL=http://api:4000
