--- a/projects/banner-data/package.json
+++ b/projects/banner-data/package.json
@@ -7,7 +7,7 @@
         "lint": "eslint \"**/*.{js,ts}\"",
         "lint:fix": "npm run lint -- --fix",
         "start": "node dist/index.js",
-        "test": "jest -i --silent --runInBand",
+        "test": "jest --passWithNoTests",
         "watch": "concurrently -n ts,node \"npm run watch:ts\" \"npm run watch:node\"",
         "watch:node": "nodemon --watch dist dist/index.js",
         "watch:test": "npm run test -- --watch-files src --watch",
@@ -20,7 +20,7 @@
         "dotenv": "^8.2.0",
         "mongoose": "^5.9.13",
         "node-cron": "^2.0.3",
-        "registrum-banner": "^0.1.0",
+        "registrum-common": "^0.1.0",
         "tough-cookie": "^4.0.0"
     },
     "devDependencies": {
