🚚✨✨ Rewrite API to use Classes / Objects (#93)
* fix implicit anys, move base controller class to common

* object-oriented api, addded ExpressApp class to common

* fix-tests

* fix deps & imports + cleanup

* fix builds, bump deps

* 🐛🐛 Fix Tests

* ✨ Set option for auto initialization

* ✨ Add Coverage

* :zap: make tests run concurrently

* rename app.ts

* clean api tests + remove mongo from github actions

* fix typos in actions workflow

* jest timeout for mongo binary download fix

Co-authored-by: Bharat Middha <5100938+bmiddha@users.noreply.github.com>

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,20 +12,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - name: Get npm cache directory
-        id: npm-cache
+      - name: Get pnpm cache directory
+        id: pnpm-cache
         shell: pwsh
         run: |
-          echo "::set-output name=dir::$(npm config get cache)"
+          echo "::set-output name=dir::common/temp/pnpm-store"
       - uses: actions/cache@v1
         with:
           path: common/temp/pnpm-store
           key: ${{ runner.os }}-node-${{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      - name: Start Docker for Mongodb
-        shell: pwsh
-        run: docker run -d -p 27017:27017 mongo
       - name: rush install
         shell: pwsh
         run: node common/scripts/install-run-rush.js install --no-link
