--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -8,15 +8,21 @@
         "lint:fix": "npm run lint -- --fix",
         "refresh": "node ./scripts/refresh.js",
         "start": "http-server dist",
-        "test": "jest --silent",
+        "test": "jest --silent --passWithNoTests",
         "watch": "webpack-dev-server --mode=development"
     },
     "dependencies": {
+        "@chakra-ui/core": "^0.8.0",
+        "@emotion/core": "^10.0.28",
+        "@emotion/styled": "^10.0.27",
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
+        "@types/morgan": "^1.9.0",
         "axios": "^0.19.2",
-        "bootstrap": "^4.4.1",
+        "bootstrap": "^4.5.0",
+        "emotion-theming": "^10.0.27",
+        "morgan": "^1.10.0",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
         "react-bootstrap": "^1.0.1",
@@ -24,17 +30,11 @@
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "react-select": "^3.1.0",
-        "react-toastify": "^6.0.1",
+        "react-toastify": "^6.0.4",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
-        "regenerator-runtime": "^0.13.5",
-        "morgan": "^1.10.0",
-        "@types/morgan": "^1.9.0",
-        "@chakra-ui/core": "^0.7.0",
-        "@emotion/core": "^10.0.28",
-        "@emotion/styled": "^10.0.27",
-        "emotion-theming": "^10.0.27"
+        "regenerator-runtime": "^0.13.5"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -44,51 +44,52 @@
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
-        "@testing-library/jest-dom": "^5.7.0",
+        "@testing-library/jest-dom": "^5.8.0",
         "@testing-library/react": "^10.0.4",
-        "@testing-library/user-event": "^10.1.2",
-        "@types/copy-webpack-plugin": "^5.0.0",
-        "@types/html-webpack-plugin": "^3.2.2",
-        "@types/jest": "^25.2.1",
-        "@types/node": "^13.13.5",
+        "@testing-library/user-event": "^10.3.1",
+        "@types/copy-webpack-plugin": "^5.0.1",
+        "@types/enzyme": "^3.10.5",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/html-webpack-plugin": "^3.2.3",
+        "@types/jest": "^25.2.3",
+        "@types/node": "^14.0.3",
         "@types/react": "^16.9.35",
         "@types/react-dom": "^16.9.8",
-        "@types/react-redux": "^7.1.8",
+        "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
-        "@types/react-select": "^3.0.12",
-        "@types/testing-library__jest-dom": "^5.0.4",
+        "@types/react-select": "^3.0.13",
+        "@types/testing-library__jest-dom": "^5.7.0",
         "@types/testing-library__react": "^10.0.1",
         "@types/testing-library__user-event": "^4.1.1",
-        "@types/webpack": "^4.41.12",
+        "@types/webpack": "^4.41.13",
         "@types/webpack-dev-server": "^3.10.1",
-        "@typescript-eslint/eslint-plugin": "^2.32.0",
-        "@typescript-eslint/parser": "^2.32.0",
+        "@typescript-eslint/eslint-plugin": "^2.34.0",
+        "@typescript-eslint/parser": "^2.34.0",
         "babel-loader": "^8.1.0",
         "copy-webpack-plugin": "^5.1.1",
         "core-js": "^3.6.5",
         "css-loader": "^3.5.3",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-config-react": "^1.1.7",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react": "^7.20.0",
         "html-webpack-plugin": "^4.3.0",
         "http-server": "^0.12.3",
-        "jest": "^25.5.4",
+        "jest": "^26.0.1",
         "node-sass": "^4.14.1",
         "prop-types": "^15.7.2",
         "react-test-renderer": "^16.13.1",
         "redux-devtools-extension": "^2.13.8",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.1",
-        "typescript": "^3.8.3",
+        "typescript": "^3.9.2",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
-        "enzyme": "^3.11.0",
-        "@types/enzyme": "^3.10.5",
-        "@types/enzyme-adapter-react-16": "^1.0.6"
+        "codecov": "^3.7.0"
     }
 }
