--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -8,33 +8,36 @@
         "lint": "eslint \"**/*.{js,ts}\"",
         "lint:fix": "npm run lint -- --fix",
         "start": "exit 0",
-        "test": "jest --passWithNoTests",
+        "test": "jest --silent --passWithNoTests",
         "watch": "tsc -w --preserveWatchOutput"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.2.11",
+        "@types/express": "^4.17.6",
+        "@types/jest": "^25.2.3",
+        "@types/mongoose": "^5.7.21",
+        "@types/node": "^14.0.3",
+        "@types/tough-cookie": "^4.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.34.0",
+        "@typescript-eslint/parser": "^2.34.0",
+        "chai": "^4.2.0",
+        "eslint": "^7.0.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "jest": "^26.0.1",
+        "nodemon": "^2.0.4",
+        "prettier": "^2.0.5",
+        "ts-jest": "^26.0.0",
+        "ts-node": "^8.10.1",
+        "tslib": "^2.0.0",
+        "typescript": "^3.9.2",
+        "codecov": "^3.7.0"
     },
     "peerDependencies": {
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
-        "tough-cookie": "^4.0.0",
-        "mongoose": "^5.9.13"
-    },
-    "devDependencies": {
-        "@types/node": "^13.13.5",
-        "@types/mongoose": "^5.7.16",
-        "@typescript-eslint/eslint-plugin": "^2.32.0",
-        "@typescript-eslint/parser": "^2.32.0",
-        "@types/tough-cookie": "^4.0.0",
-        "eslint": "^7.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.3",
-        "nodemon": "^2.0.3",
-        "prettier": "^2.0.5",
-        "ts-jest": "^26.0.0",
-        "ts-node": "^8.10.1",
-        "tslib": "^1.11.2",
-        "typescript": "^3.8.3",
-        "jest": "^26.0.1",
-        "@types/jest": "^25.2.2",
-        "chai": "^4.2.0",
-        "@types/chai": "^4.2.11"
+        "express": "^4.17.1",
+        "mongoose": "^5.9.15",
+        "tough-cookie": "^4.0.0"
     }
 }
