:construction_worker: patch github ci

--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -20,7 +20,7 @@ jobs:
           branch="${{ github.ref }}".Split("refs/heads/")[1]
           tag="${{ github.ref }}".Split("refs/tags/")[1]
         }
-        $VersionInfo | ConvertTo-Json > ./client/src/version.json
+        $VersionInfo | ConvertTo-Json > ./projects/client/src/version.json
     - name: docker build, push
       shell: pwsh
       run: |
