added base ui components

--- a/projects/client/.eslintrc
+++ b/projects/client/.eslintrc
@@ -2,44 +2,12 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 2020,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
+        "sourceType": "module"
     },
     "extends": [
-        "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
         "prettier/@typescript-eslint",
-        "plugin:prettier/recommended",
-        "prettier/react"
-    ],
-    "plugins": [
-        "react"
-    ],
-    "env": {
-        "browser": true,
-        "jasmine": true,
-        "jest": true,
-        "node": true,
-        "worker": true,
-        "serviceworker": true
-    },
-    "settings": {
-        "react": {
-            "pragma": "React",
-            "version": "detect"
-        }
-    },
-    "overrides": [
-        {
-            "files": [
-                "**/*.tsx"
-            ],
-            "rules": {
-                "react/prop-types": "off"
-            }
-        }
+        "plugin:prettier/recommended"
     ],
     "rules": {
         "no-trailing-spaces": "warn",
@@ -52,6 +20,7 @@
             }
         ],
         "@typescript-eslint/no-unused-vars": "warn",
-        "@typescript-eslint/no-var-requires": "off"
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/interface-name-prefix": "off"
     }
 }
