--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -1,96 +1,56 @@
 {
-    "name": "registrum-client",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "build": "webpack --mode=production && npm run lint",
-        "lint": "eslint \"src/**/*.{js,ts,tsx}\"",
-        "lint:fix": "npm run lint -- --fix",
-        "refresh": "node ./scripts/refresh.js",
-        "start": "http-server dist",
-        "test": "jest --silent --passWithNoTests",
-        "watch": "webpack-dev-server --mode=development"
-    },
-    "dependencies": {
-        "@chakra-ui/core": "^0.8.0",
-        "@emotion/core": "^10.0.28",
-        "@emotion/styled": "^10.0.27",
-        "@fortawesome/fontawesome-svg-core": "^1.2.28",
-        "@fortawesome/free-solid-svg-icons": "^5.13.0",
-        "@fortawesome/react-fontawesome": "^0.1.9",
-        "@types/morgan": "^1.9.0",
-        "axios": "^0.19.2",
-        "bootstrap": "^4.5.0",
-        "emotion-theming": "^10.0.27",
-        "morgan": "^1.10.0",
-        "react": "^16.13.1",
-        "react-app-polyfill": "^1.0.6",
-        "react-bootstrap": "^1.0.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "^7.2.0",
-        "react-router-dom": "^5.2.0",
-        "react-select": "^3.1.0",
-        "react-toastify": "^6.0.4",
-        "redux": "^4.0.5",
-        "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.3.0",
-        "regenerator-runtime": "^0.13.5"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.9.6",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/preset-react": "^7.9.4",
-        "@babel/preset-typescript": "^7.9.0",
-        "@testing-library/jest-dom": "^5.8.0",
-        "@testing-library/react": "^10.0.4",
-        "@testing-library/user-event": "^10.3.1",
-        "@types/copy-webpack-plugin": "^5.0.1",
-        "@types/enzyme": "^3.10.5",
-        "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/html-webpack-plugin": "^3.2.3",
-        "@types/jest": "^25.2.3",
-        "@types/node": "^14.0.3",
-        "@types/react": "^16.9.35",
-        "@types/react-dom": "^16.9.8",
-        "@types/react-redux": "^7.1.9",
-        "@types/react-router-dom": "^5.1.5",
-        "@types/react-select": "^3.0.13",
-        "@types/testing-library__jest-dom": "^5.7.0",
-        "@types/testing-library__react": "^10.0.1",
-        "@types/testing-library__user-event": "^4.1.1",
-        "@types/webpack": "^4.41.13",
-        "@types/webpack-dev-server": "^3.10.1",
+  "name": "registrum-client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@fluentui/react": "^7.117.3",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.2.1",
+    "@testing-library/user-event": "^11.2.1",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.3",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@uifabric/azure-themes": "^7.1.22",
+    "@uifabric/fluent-theme": "^7.1.91",
+    "@uifabric/react-hooks": "^7.4.5",
+    "history": "^5.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "typescript": "^3.9.2"
+  },
+  "scripts": {
+    "lint": "eslint \"src/**/*.{js,ts}\"",
+    "lint:fix": "npm run lint -- --fix",
+    "start": "react-scripts start",
+    "watch": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/history": "^4.7.6",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "@types/eslint": "^6.8.1",
+        "eslint": "^7.0.0",
         "@typescript-eslint/eslint-plugin": "^2.34.0",
         "@typescript-eslint/parser": "^2.34.0",
-        "babel-loader": "^8.1.0",
-        "copy-webpack-plugin": "^5.1.1",
-        "core-js": "^3.6.5",
-        "css-loader": "^3.5.3",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
-        "eslint": "^7.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-config-react": "^1.1.7",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.20.0",
-        "html-webpack-plugin": "^4.3.0",
-        "http-server": "^0.12.3",
-        "jest": "^26.0.1",
-        "node-sass": "^4.14.1",
-        "prop-types": "^15.7.2",
-        "react-test-renderer": "^16.13.1",
-        "redux-devtools-extension": "^2.13.8",
-        "sass-loader": "^8.0.2",
-        "style-loader": "^1.2.1",
-        "typescript": "^3.9.2",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.0",
-        "codecov": "^3.7.0",
-        "dotenv": "^8.2.0"
-    }
+        "@types/react-router-dom": "^5.1.5",
+    "prettier": "^2.0.5"
+  }
 }
