--- a/projects/client/public/manifest.json
+++ b/projects/client/public/manifest.json
@@ -1,62 +1,25 @@
 {
-    "short_name": "Registrum",
-    "name": "Registrum: Class Tracker",
-    "description": "Registrum Class Tracker",
-    "lang": "en-US",
-    "categories": [],
-    "icons": [
-        {
-            "src": "/images/icon-72x72.png",
-            "type": "image/png",
-            "sizes": "72x72",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "/images/icon-96x96.png",
-            "type": "image/png",
-            "sizes": "96x96",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "/images/icon-128x128.png",
-            "type": "image/png",
-            "sizes": "128x128",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "/images/icon-144x144.png",
-            "type": "image/png",
-            "sizes": "144x144",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "/images/icon-152x152.png",
-            "type": "image/png",
-            "sizes": "152x152",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "/images/icon-192x192.png",
-            "type": "image/png",
-            "sizes": "192x192",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "/images/icon-384x384.png",
-            "type": "image/png",
-            "sizes": "384x384",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "/images/icon-512x512.png",
-            "type": "image/png",
-            "sizes": "512x512",
-            "purpose": "maskable any"
-        }
-    ],
-    "start_url": ".",
-    "display": "fullscreen",
-    "theme_color": "#d90000",
-    "background_color": "#ffffff",
-    "gcm_sender_id": "565395438650"
+  "short_name": "React App",
+  "name": "Create React App Sample",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
