--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -50,7 +50,6 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "prettier": "^2.0.5",
-    "react-hot-loader": "^4.12.21",
     "react-svg-loader": "^3.0.3",
     "style-loader": "^1.2.1",
     "svg-inline-loader": "^0.8.2",
@@ -58,6 +57,11 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "@babel/runtime": "^7.10.4"
+    "@babel/runtime": "^7.10.4",
+    "copy-webpack-plugin": "^6.0.3",
+    "@types/copy-webpack-plugin": "^6.0.0",
+    "@types/webpack": "^4.41.21",
+    "ts-node": "^8.10.1",
+    "@types/webpack-dev-server": "^3.11.0"
   }
 }
