separate project dockerfiles

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - run: echo ${{ matrix.project }}
     - name: build-image
       uses: docker/build-push-action@v1
       with:
@@ -36,7 +35,7 @@ jobs:
         registry: ${{ secrets.REGISTRY_HOST }}
         repository: ${{ github.repository }}/${{ matrix.project }}
         build_args: CLIENT_WEBPUSHPUBLIC=${{ secrets.WEBPUSHPUBLIC }}
-        target: ${{ matrix.project }}
+        dockerfile: docker/${{ matrix.project }}.Dockerfile
         add_git_labels: true
         tag_with_ref: true
         push: ${{ (startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/master') || (github.ref == 'refs/heads/staging')) }}
